# Umbra

./: .mcp.json  CLAUDE.md  COMMIT_METHODS.md  COMPARISON.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: launch.json  milanote-audit.md
.github/workflows/: README.md  ci-android.yml  ci-ios.yml  ci-macos.yml  ci-windows.yml
.husky/: commit-msg  pre-commit
docs/: BACKUP_BLOCKSUITE.md  architecture-overview.md
scripts/: commit-version-bump.mjs  sync-version.mjs
scripts/export/: README.md  android.sh  ios.sh  macos.sh  windows.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/features/canvas/: CanvasWorkspace.tsx  ContextMenu.tsx  InfiniteCanvas.tsx  LegacyCanvasShell.tsx  ThemeToggle.tsx  ZoomBar.tsx  connectorGeometry.ts
src/features/elements/: CanvasElementCard.tsx  LockModal.tsx
src/features/home/: HomePage.tsx  PasswordModal.tsx  TrashPanel.tsx  UmbraLogo.tsx  UserSettingsModal.tsx
src/features/navigation/: BreadcrumbNav.tsx
src/features/toolbar/: ElementSettingsPanel.tsx  LeftToolbar.tsx  ToolbarIcons.tsx
src/lib/: canvasDnD.ts  desktopApi.ts  useKeyboardShortcuts.ts
src/store/: defaultState.ts  useBoardStore.ts
src/types/: elements.ts  workspace.ts
