[package]
name = "umbra"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-mcp-bridge = "0.10"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
open = "5"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
regex = "1"
url = "2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-updater = "2.10.0"
